<resources>
    <string name="app_name">BestAutoservice</string>
    <string name="main_label">BestAutoservices</string>
    <string name="text_button_search">Поиск</string>
    <string name="text_button_cancel">Отмена</string>
    <string name="text_name">Название организации</string>
    <string name="text_metro">Метро</string>
    <string name="number">Номер телефона</string>
    <string name="otzivi">Отзывы:</string>
    <string name="adress">Адрес</string>
    <string name="marka">Марки</string>
    <string name="model">Модели</string>
    <string name="vid_rabot">Вид работ</string>
    <string name="main">Best Autoservices</string>
    <string name="text_marka">Марка авто</string>
    <string name="text_model">Модели авто</string>
    <string name="text_okrug">Город</string>
    <string name="text_rayon">Район</string>
    <string name="text_otzivi">Отзывы:</string>
    <string name="add_otziv">Добавить отзыв + </string>
    <string name="button_search">Поиск автосервисов</string>
    <string name="open_on_the_map">Открыть на карте</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_permission_map">Ашыбачка</string>
    <string name="search_autoservice_text">Поиск автосервиса</string>
    <string name="search_autoservices_button_text">Найти автосервисы</string>
    <string name="find_button_text">Найти</string>
    <string name="text_find">Поиск автосервиса</string>
    <string name="title_activity_item">Item</string>
    <string name="add_otziv_2">Добавить отзыв</string>
    <string name="rating">Выбрать рейтинг:</string>
    <string name="add_otziv_hint">Введите текст</string>
    <string name="grafik_raboti">График работы</string>
    <string name="inviteFriends">Пригласить друзей</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">driver_close</string>
    <string name="about_app_main_text">О приложении</string>
    <string name="about_app">v 1.0 \n Поиск и информация об автосервисах</string>
    <string name="how_find_main_text">Как искать</string>
    <string name="how_find">Поиск осуществляется по одному либо нескольким парметрам. Доступен поиск по карте. Для отображения всех автосервисов на карте нажмите не значке локации на главном экране приложения. После выбора интересующих Вас парметров нажмите кнопку поиска внизу экрана.</string>
    <string name="cancel">Очистить</string>
    <string name="city">Город</string>
    <string name="type_avto">Типы авто</string>
    <string name="site">Сайт</string>
</resources>
