<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/item_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.bingerdranch.android.bestautoservice.Item">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/details_back"
                android:scaleType="center"
                android:src="@drawable/empty_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <RatingBar
                android:isIndicator="true"
                android:id="@+id/rating_detail"
                android:rating="3"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/marka"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_marka"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="BMW, Audi, Mercedes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/type_avto"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_model"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="Легковые"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/city"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_city"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="Москва"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/text_rayon"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_rayon"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="Запад"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/grafik_raboti"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_grafik_raboti"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="8:00 - 19:00"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/text_metro"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_metro"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="Площадь ленина"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/adress"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_adress"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="Моква, Ленина 78"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/number"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_number"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="+4343657364"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#868686"/>

            <TableRow
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/main_green"
                    android:textSize="18sp"
                    android:text="@string/vid_rabot"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_vid_rabot"
                    android:textSize="18sp"
                    android:gravity="end"
                    tools:text="Подвеска, двигатель"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </TableRow>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:alpha="0.7"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <ImageView
            android:src="@drawable/back_gray"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textColor="@color/main_green"
            android:id="@+id/name"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="ТЕХЦЕНТР ТМ"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</FrameLayout>

